crates/tmark-writers/tests/snapshots/fixtures__container-admonition-title@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{tscallout}[kind=note, title={\leavevmode\phantomsection\label{ex:un}1 : \emph{Feu}}]
Corps.
\end{tscallout}

\begin{tscallout}[kind=tip, title={\emph{Plié} et \tscodeinline{code}}, id=tip:plie, collapsed]
Corps plié.
\end{tscallout}

---requires---
{
  "packages": [
    "fvextra",
    "tcolorbox",
    "xcolor"
  ],
  "fragments": [
    "ts-callouts",
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": [
    "ex"
  ]
}
