crates/tmark-writers/tests/snapshots/fixtures__container-admonition-title@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#ts-callout(kind: "note", title: [1<ex:un> : _Feu_])[
Corps.
]

#ts-callout(kind: "tip", title: [_Plié_ et `code`], id: "tip:plie", collapsed: true)[
Corps plié.
]

---requires---
{
  "packages": [
    "tcolorbox",
    "xcolor"
  ],
  "fragments": [
    "ts-callouts"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": [
    "ex"
  ]
}
