crates/tmark-writers/tests/snapshots/fixtures__container-admonition@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#ts-callout(kind: "warning", title: [#ts-logo("LaTeX") toolchain])[
Install #ts-logo("TeX") Live before `texsmith --build`.
]

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "pdflscape",
    "progressbar",
    "tcolorbox",
    "xcolor"
  ],
  "fragments": [
    "ts-callouts",
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
