crates/tmark-writers/tests/snapshots/fixtures__container-html-block@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<div class="two-column-list">
<ol>
<li>one</li>
<li>two</li>
</ol>
</div>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
