crates/tmark-writers/tests/snapshots/fixtures__container-landscape@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{tsdiv}{landscape}
\begin{table}[H]
\centering
\caption{A wide table.}
\label{tbl:wide}
\vspace{0.5em}
\begin{tabularx}{\linewidth}{>{\raggedright\arraybackslash}X>{\raggedright\arraybackslash}X}
\toprule
\textbf{Key} & \textbf{Value} \\
\midrule
a & 1 \\
\bottomrule
\end{tabularx}
\end{table}
\end{tsdiv}

---requires---
{
  "packages": [
    "booktabs",
    "epigraph",
    "float",
    "graphicx",
    "marginnote",
    "multicol",
    "pdflscape",
    "progressbar",
    "tabularx",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
