crates/tmark-writers/tests/snapshots/fixtures__container-landscape@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#ts-div("landscape")[
#figure(
  table(
    columns: (1fr, 1fr,),
    align: (left, left,),
    table.header([Key], [Value]),
    [a], [1],
  ),
  caption: [A wide table.],
) <tbl:wide>
]

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "pdflscape",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
